feat: criação do projeto de mensagens.

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 spring:
   application:
-    name: @api.name@
-    version: @api.version@
+    name: "@api.name@"
+    version: "@api.version@"
   profiles:
     active: ${SPRING_PROFILES_ACTIVE:local}
