--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -1,7 +1,7 @@
 server:
   port: ${PORT:8585}
   servlet:
-    context-path: /rpl-basic-messages-dev
+    context-path: /@api.name@-dev
 
 spring:
   data:
