--- a/src/main/resources/application-hml.yml
+++ b/src/main/resources/application-hml.yml
@@ -1,7 +1,7 @@
 server:
   port: ${PORT:9090}
   servlet:
-    context-path: /rpl-basic-messages-hml
+    context-path: /@api.name@-hml
 
 spring:
   data:
