--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -1,7 +1,7 @@
 server:
   port: 8585
   servlet:
-    context-path: /rpl-basic-messages-local
+    context-path: /@api.name@-local
 
 spring:
   data:
